Change About images to SVG. Get rid of scroll bar on About section. Fix spacing in About. Added text to reopen About window.

--- a/actual/css/styles.css
+++ b/actual/css/styles.css
@@ -106,9 +106,15 @@ div#pics img.img-responsive {
 
 }
 
+hr {
+	clear: both;
+	visibility: hidden;
+	width: 90%;
+	padding: 2px;
+}
+
 .windowContent {
 	height: 65vh;
-	overflow-y: scroll;
 	overflow-x: hidden;
 }
 
